--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "csc445.loggingcycle"
+        applicationId "edu.myapplication"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
