--- a/MathQuiz/app/src/main/AndroidManifest.xml
+++ b/MathQuiz/app/src/main/AndroidManifest.xml
@@ -6,19 +6,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".QuizActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".QuizActivity"
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-            <activity
-                android:name=".CheatActivity"
-                android:label="@string/title_activity_cheat">
-            </activity>
+        <activity
+            android:name=".CheatActivity"
+            android:label="@string/title_activity_cheat" >
+        </activity>
     </application>
 
 </manifest>
