--- a/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="csc445.lye.edu.missouriwestern.criminalIntent">
+    package="edu.missouriwestern.akhan5.csc445.criminalintend">
 
     <application
         android:allowBackup="true"
@@ -9,13 +9,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".CrimePagerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName=".CrimeListActivity">
+        </activity>
+        <activity android:name=".CrimeListActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
-
 
 </manifest>
